Fixed inner-container flex-wrap not wrapping

--- a/uil/core/static/uil.core/css/uu-style.css
+++ b/uil/core/static/uil.core/css/uu-style.css
@@ -31,6 +31,7 @@ label {
     max-width: 1170px;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
 }
 
 /* Top panel */
@@ -71,7 +72,7 @@ label {
     text-decoration: none;
     font-family: "Open Sans","Frutiger",Helvetica,Arial,sans-serif;
     font-weight: 100;
-    padding-bottom: 10px;
+    padding: 0 0 10px;
 }
 
 .titletext a, .titletext a:hover {
